# kts-wheel-of-fortune

./: .gitignore  README.md  alembic.ini  config.yml  config.yml.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
alembic/: env.py
alembic/versions/: 8d48f97931bd_initial.py  e47c42463da9_initial.py  f0aba3bd63e5_initial.py
app/admin/: models.py  views.py
app/base/: base_accessor.py
app/game_service/: game.py  models.py  states.py
app/quiz/: models.py  schemes.py  views.py
app/store/: __init__.py
app/store/admin/: accessor.py
app/store/bot/: manager.py
app/store/bot/handlers/: __init__.py  callback_query.py  commands.py
app/store/database/: __init__.py  database.py
app/store/game/: accessor.py
app/store/quiz/: accessor.py
app/store/tg_api/: accessor.py  dataclasses.py  keyboards.py  poller.py
app/store/vk_api/: accessor.py  dataclasses.py  poller.py
app/web/: app.py  config.py  middlewares.py  mixins.py
tests/: config.yml
tests/bot/: test_bot_manager.py
tests/fixtures/: common.py
