[tool.poetry]
name = "kts-wheel-of-fortune"
version = "0.1.0"
description = ""
authors = ["caVenikk <sqqvt1@gmail.com>"]
readme = "README.md"
packages = [{ include = "kts_wheel_of_fortune" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.8.4"
aiohttp-apispec = "2.2.3"
aiohttp-session = "2.12.0"
aioresponses = "0.7.4"
aiosignal = "1.3.1"
alembic = "1.9.4"
async-timeout = "4.0.2"
asyncpg = "0.27.0"
marshmallow = "3.19.0"
pytest = "7.2.1"
pytest-aiohttp = "1.0.4"
pytest-asyncio = "0.20.3"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
sqlalchemy = "2.0.4"
cryptography = "^39.0.1"
pyyaml = "^6.0"
pydantic = "^1.10.5"
aiohttp-pydantic = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
